fixed overflow issue, changed large margin/padding from rem to px

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,17 +1,3 @@
-.temp-color-picker {
-    color: #666CA3;
-    color: #13183F;
-    color: #83869A;
-    color: #F74780;
-    color: #FFA7C3;
-    color: #FFFFFF;
-    /* gradient colors */
-    /* #F02AA6 - #FF6F48 */
-    /* #4851FF - #F02AA6 */
-}
-
-@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;700&display=swap');
-
 * {
     box-sizing: border-box;
 }
@@ -35,14 +21,12 @@ body {
     align-items: center;
     height: 100vh;
     font-family: 'Plus Jakarta Sans', sans-serif;
-
 }
 
 .container {
-    max-width: 1920px;
+    max-width: 120rem;
     background-image: linear-gradient(to top, #f1f3ff, #FFFFFF);
     padding: 1.5rem;
-    clip-path: border-box;
 }
 
 header nav {
@@ -105,7 +89,7 @@ main p {
 .article-container {
     display: grid;
     gap: 2.5rem;
-    margin-bottom: 4rem;
+    margin-bottom: 64px;
 }
 
 aside {
@@ -134,7 +118,7 @@ aside {
 .article-base-design h2 {
     font-size: 1.25rem;
     color: #13183F;
-    margin-top: 4rem;
+    margin-top: 64px;
 }
 
 .article-base-design p {
@@ -171,15 +155,15 @@ footer nav {
     background-image: linear-gradient(to bottom, hsla(237, 100%, 64%, 0.6), hsla(322, 87%, 55%, 0.6));
 }
 
-
-@media screen and (min-width: 750px) {
+/* =================================================MEDIA=========================================================== */
+@media screen and (min-width: 46.875rem) {
     .container {
         padding: 2rem;
-        /* overflow: hidden; */
+        overflow: hidden;
     }
 
     header {
-        margin-bottom: 5rem;
+        margin-bottom: 80px;
     }
 
     .btn-started {
@@ -189,7 +173,7 @@ footer nav {
     .container-main {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        margin-bottom: 10rem;
+        margin-bottom: 160px;
     }
 
     .article-container {
@@ -203,8 +187,8 @@ footer nav {
 
     .container-main-image img {
         position: absolute;
-        top: -15rem;
-        right: -20rem;
+        top: -240px;
+        right: -320px;
     }
 
     footer nav {
@@ -213,15 +197,15 @@ footer nav {
     }
 }
 
-@media screen and (min-width: 1225px) {
+/* ======================================================MEDIA============================================== */
+@media screen and (min-width: 76.5625rem) {
     .container {
-        padding-left: 8rem;
-        padding-right: 8rem;
-        /* overflow: hidden; */
+        padding-left: 128px;
+        padding-right: 128px;
     }
 
     header {
-        margin-bottom: 8rem;
+        margin-bottom: 128px;
     }
 
     .btn-started {
@@ -231,14 +215,14 @@ footer nav {
     .container-main {
         display: grid;
         grid-template-columns: 1fr 1fr;
-        margin-bottom: 14rem;
+        margin-bottom: 224px;
     }
 
 
 
     main p {
         font-size: 1.125rem;
-        margin-bottom: 3rem;
+        margin-bottom: 48px;
     }
 
     .btn-started-gradient-orange {
@@ -251,8 +235,8 @@ footer nav {
 
     .container-main-image img {
         position: absolute;
-        top: -25rem;
-        right: -32rem;
+        top: -400px;
+        right: -512px;
 
     }
 
